Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <h3>
 <a name="raguel" class="anchor" href="#raguel"><span class="octicon octicon-link"></span></a>raguel</h3>
 
+<p>Current Set of <a href="https://github.com/abhishekkr/raguel/tree/master/examples">Examples</a> can be referred <a href="https://github.com/abhishekkr/raguel/tree/master/examples">here</a> to get a basic understanding of how to use it for basic system shell tasks.</p>
+
 <p>Mythological Context: <a href="http://en.wikipedia.org/wiki/Raguel_(archangel)">http://en.wikipedia.org/wiki/Raguel_(archangel)</a>
 Reference: ArchAngel, Name means The friend of God.</p>
 
